# fulgurite

./: Pipfile  README.md  README.org  phylo.py  pyproject.toml  references.bib
fulgurite/: likelihood.py  mcmc.py  mkmodel.py  phylo.py  phylonode.py  tree.py
tests/: test_fulgurite.py  test_likelihood.py  test_tree.py
