[tool.poetry]
name = "fulgurite"
version = "0.1.0"
description = "Toy Bayesian MCMC phylogenetics package"
authors = ["Isaac Stead <isaac_stead@eva.mpg.de>"]

[tool.poetry.dependencies]
python =  ">=3.10,<3.11"
numpy = "^1.23.0"
scipy = "^1.8.1"
newick = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
